syntax = "proto3";

option go_package = "api_gw/pb";

message GenericResponse {
  string status = 1;
  string message = 2;
}